manifests/hello-kubernetes/hello-kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-test
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  namespace: cluster-test
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  namespace: cluster-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - hello-kubernetes
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: hello-kubernsetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
        
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-kubernetes
  namespace: cluster-test
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "hellokub.home.ktogias.gr"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: cluster-test.hello-kubernetes-certificate
    hosts:
    - "hellokub.home.ktogias.gr"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-kubernetes
  namespace: cluster-test
spec:
  hosts:
  - "hellokub.home.ktogias.gr"
  gateways:
  - hello-kubernetes
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: hello-kubernetes
